--- a/packages/websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/websites/coffeekraken-io/src/css/sugar.css
@@ -33,6 +33,8 @@
   fa:cogs:setting
   fa:th:return
   fa:link:link
+  fa:copy:copy
+  fa:check:copied
   fa:search:search
   fa:radiation:nothing
   fa:download:import
