--- a/packages/websites/coffeekraken-io/src/css/generic/layout.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/layout.css
@@ -76,7 +76,8 @@
 
     .__spinner {
         @sugar.color (accent);
-        @sugar.ui.loader.spinner();
+        @sugar.ui.loader.squareDots();
+        --s-scale: 2;
     }
 
     p {
