--- a/packages/app/s-kitchen/src/data/postcss/index.css
+++ b/packages/app/s-kitchen/src/data/postcss/index.css
@@ -1,6 +1,10 @@
 /* importing sugar toolkit */
 @import './sugar.css';
 
+body {
+    background: sugar.color(base, background);
+}
+
 /* welcome page styling */
 .content {
     position: absolute;
@@ -23,6 +27,18 @@
         background-image: url('https://picsum.photos/1600/900');
         background-size: cover;
         filter: saturate(0%);
-        opacity: 0.02;
+        opacity: 0.04;
+    }
+}
+
+/* logo */
+.logo {
+    width: 150px;
+
+    .main {
+        fill: sugar.color(base, --lighten 100);
+    }
+    .accent {
+        fill: sugar.color(accent);
     }
 }
