--- a/packages/@websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/@websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -69,7 +69,7 @@
     }
 
     svg .main {
-      fill: sugar.color(base, --darken 55);
+      fill: sugar.color(main, --darken 10);
     }
     svg .accent {
       fill: sugar.color(accent);
