--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/features/partials/opensource.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/features/partials/opensource.css
@@ -23,7 +23,7 @@
   .__box {
     position: relative;
     overflow: hidden;
-    margin-top: -300px;
+    /* margin-top: -300px; */
     @sugar.depth (10);
 
     @sugar.theme.when dark {
