--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -1,54 +1,156 @@
 #homepage-welcome {
-  height: 100vh;
+  height: clamp(720px, 80vh, 100vh);
   text-align: left;
   position: relative;
   z-index: 10;
-  margin-bottom: 50px;
 
   @sugar.media mobile {
     height: auto;
     text-align: center;
   }
 
-  .__illustration {
+  .__color-picker {
+    position: absolute;
+    top: 36%;
+    left: 16%;
+    transform: translateX(-50%);
+  }
+  .__datetime-picker {
+    position: absolute;
+    top: 50%;
+    right: 15%;
+    transform: translateX(50%);
+  }
+
+  .__avatar-1 {
+    position: absolute;
+    top: 18%;
+    right: 7%;
+    @sugar.scale (1.2);
+  }
+  .__avatar-2 {
+    position: absolute;
+    top: 70%;
+    left: 23%;
+    @sugar.scale (0.9);
+  }
+  .__avatar-3 {
+    position: absolute;
+    top: -5%;
+    left: 29%;
+  }
+
+  .__loader-1 {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    font-size: 40px;
+    transform: translateX(-50%);
+    @sugar.color (accent);
+  }
+
+  .__icon-1 {
+    position: absolute;
+    top: 21%;
+    left: 5%;
+    font-size: 30px;
+    transform: rotate(-15deg);
+  }
+  .__icon-2 {
+    position: absolute;
+    top: 40%;
+    right: 0;
+    font-size: 40px;
+    transform: rotate(10deg);
+  }
+  .__icon-3 {
+    position: absolute;
+    top: 56%;
+    left: 12%;
+    font-size: 50px;
+  }
+  .__icon-4 {
+    position: absolute;
+    top: 0;
+    right: 25%;
+    font-size: 60px;
+    transform: rotate(15deg);
+  }
+  .__icon-5 {
+    position: absolute;
+    top: 70%;
+    right: 23%;
+    font-size: 40px;
+  }
+
+  .__tooltip-1 {
+    position: absolute;
+    top: 5%;
+    left: 25%;
+    bottom: auto;
+    right: auto;
+    z-index: 0;
+    transform: translateX(-100%) rotate(-20deg);
+  }
+  .__tooltip-2 {
+    position: absolute;
+    top: 8%;
+    right: 12%;
+    bottom: auto;
+    left: auto;
+    z-index: 0;
+    transform: translateX(100%) rotate(20deg);
+  }
+  .__tooltip-3 {
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    bottom: auto;
+    right: auto;
+    z-index: 0;
+    transform: translateX(-50%) translateY(-100%);
+  }
+
+  @sugar.media mobile {
+    position: relative;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: 350px;
+    transform: scale(1.4);
+  }
+
+  ck-blob {
+    display: block;
+  }
+
+  .__loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  input {
+    text-align: left;
+  }
+
+  .__content {
     position: absolute;
     width: 1280px;
     height: 720px;
     z-index: 10;
     top: 50vh;
-    left: calc(50% - 250px);
-    transform: scale(1) translateY(-50%);
-    pointer-events: none;
-
-    @sugar.media mobile {
-      position: relative;
-      top: 100px;
-      left: 0;
-      width: 100%;
-      height: 350px;
-      transform: scale(1.4);
-    }
-
-    ck-blob {
-      display: block;
-    }
-
-    .__loader {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-
-  .__content {
-    position: absolute;
-    z-index: 9;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    @sugar.container (default);
+    transform: scale(1) translateX(-50%) translateY(-50%);
+    text-align: center;
+    padding: sugar.padding(80) 0;
+
+    .s-typo--h3,
+    .s-typo--p,
+    .s-typo--lead {
+      margin-inline: auto;
+    }
 
     @sugar.media >=wide {
       @sugar.container (wide);
