--- a/packages/features/s-appear-feature/src/css/s-appear-feature.css
+++ b/packages/features/s-appear-feature/src/css/s-appear-feature.css
@@ -1,7 +1,7 @@
 [s-appear] {
     opacity: 0;
 
-    &[in='right'] {
+    /* &[in='right'] {
         transform: translateX(100px);
     }
     &[in='left'] {
@@ -12,10 +12,11 @@
     }
     &[in='bottom'] {
         transform: translateY(100px);
-    }
+    } */
 
     &[appear] {
-        @sugar.transition (slow);
+        opacity: 1;
+        /* @sugar.transition (slow);
         transition-easing: ease-out;
         opacity: 1;
 
@@ -24,6 +25,6 @@
         &[in='top'],
         &[in='bottom'] {
             transform: translate(0, 0);
-        }
+        } */
     }
 }
