--- a/packages/@websites/coffeekraken-io/src/css/generic/layout.css
+++ b/packages/@websites/coffeekraken-io/src/css/generic/layout.css
@@ -1,124 +1,123 @@
 .scroll-top {
-    position: fixed;
-    z-index: 100;
-    bottom: 20px;
-    right: 20px;
-    background: sugar.color(main, surface);
-    padding: sugar.padding(20) sugar.padding(30);
-    font-size: sugar.font.size(50);
-    @sugar.border.radius;
-    opacity: 0;
-    transform: translateY(50%);
-    transition: sugar.transition(fast);
-    poiner-events: none;
+  position: fixed;
+  z-index: 100;
+  bottom: 20px;
+  right: 20px;
+  background: sugar.color(main, surface);
+  padding: sugar.padding(20) sugar.padding(30);
+  font-size: sugar.font.size(50);
+  @sugar.border.radius;
+  opacity: 0;
+  transform: translateY(50%);
+  transition: sugar.transition(fast);
+  poiner-events: none;
 
-    .scrolled & {
-        pointer-events: all;
-        opacity: 1;
-        transform: translateY(0);
-    }
+  .scrolled & {
+    pointer-events: all;
+    opacity: 1;
+    transform: translateY(0);
+  }
 
-    &:hover {
-        background: sugar.color(main, surface, --lighten 10);
-    }
+  &:hover {
+    background: sugar.color(main, surface, --lighten 10);
+  }
 }
 
 @keyframes top-loader {
-    0% {
-        left: 0;
-        width: 0;
-    }
-    50% {
-        left: 25%;
-        width: 50%;
-    }
-    100% {
-        left: 100%;
-        width: 0;
-    }
+  0% {
+    left: 0;
+    width: 0;
+  }
+  50% {
+    left: 25%;
+    width: 50%;
+  }
+  100% {
+    left: 100%;
+    width: 0;
+  }
 }
 
 .top-loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: sugar.color(accent);
-    z-index: 999;
-    animation: top-loader 1s ease-in-out infinite;
-    transition: opacity 0.2s ease-in;
-    opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: sugar.color(accent);
+  z-index: 999;
+  transition: opacity 0.2s ease-in;
+  opacity: 0;
 
-    .loading & {
-        opacity: 1;
-    }
+  .loading & {
+    opacity: 1;
+    animation: top-loader 1s ease-in-out infinite;
+  }
 }
 
 .loader {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    font-size: 20px;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-    opacity: 0;
-    @sugar.transition (fast);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  font-size: 20px;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  display: none;
+  @sugar.transition (fast);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: sugar.margin(30);
+
+  .initial-loading & {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: sugar.margin(30);
+  }
 
-    .initial-loading & {
-        opacity: 1;
-    }
+  .__spinner {
+    @sugar.color (accent);
+    @sugar.ui.loader.squareDots();
+    --s-scale: 2;
+  }
 
-    .__spinner {
-        @sugar.color (accent);
-        @sugar.ui.loader.squareDots();
-        --s-scale: 2;
-    }
+  p {
+    opacity: 0.5;
+  }
 
-    p {
-        opacity: 0.5;
-    }
+  .__logo {
+    width: 140px;
+    position: relative;
+    left: 12px;
 
-    .__logo {
-        width: 140px;
+    svg {
+      height: 40px;
+      width: 140px;
+      transform-origin: 0 50%;
+      transform: translate(-10px, 0px);
+
+      @sugar.media mobile {
         position: relative;
-        left: 12px;
-
-        svg {
-            height: 40px;
-            width: 140px;
-            transform-origin: 0 50%;
-            transform: translate(-10px, 0px);
-
-            @sugar.media mobile {
-                position: relative;
-                top: 0;
-            }
-        }
-
-        svg .main {
-            fill: sugar.color(main, --darken 10);
-        }
-        svg .accent {
-            fill: sugar.color(accent);
-        }
-
-        @sugar.theme.when (dark) {
-            svg .main {
-                fill: sugar.color(main, text);
-            }
-            svg .accent {
-                fill: sugar.color(accent);
-            }
-        }
+        top: 0;
+      }
     }
+
+    svg .main {
+      fill: sugar.color(main, --darken 10);
+    }
+    svg .accent {
+      fill: sugar.color(accent);
+    }
+
+    @sugar.theme.when (dark) {
+      svg .main {
+        fill: sugar.color(main, text);
+      }
+      svg .accent {
+        fill: sugar.color(accent);
+      }
+    }
+  }
 }
 
 body.initial-loading > *:not(.top-loader, .loader) {
-    opacity: 0;
+  opacity: 0;
 }
