--- a/packages/@websites/coffeekraken-io/src/css/sugar.css
+++ b/packages/@websites/coffeekraken-io/src/css/sugar.css
@@ -44,10 +44,15 @@
   fa:th:return
   fa:link:link
   fa:copy:copy
+  fa:check:check
   fa:check:copied
   fa:search:search
   fa:radiation:nothing
   fa:download:import
+  fa:star:star
+  fa:pen-nib:write
+  fab:google:google
+  fab:github:github
   fab:discord:discord
   fab:github:github
   fab:facebook:facebook
