--- a/packages/components/s-slider-component/src/css/s-slider-component.css
+++ b/packages/components/s-slider-component/src/css/s-slider-component.css
@@ -4,6 +4,17 @@ s-slider,
     font-size: sugar.scalable(1rem);
 }
 
+s-slider[behavior='basic'] {
+    > .s-slider {
+        > .s-slider__slides-wrapper {
+            > .s-slider__slides {
+                transform: translateX(calc(var(--s-slider-slide) * 100% * -1));
+                @sugar.transition();
+            }
+        }
+    }
+}
+
 s-slider[lnf^='default'] {
     position: relative;
 
@@ -27,85 +38,89 @@ s-slider[lnf^='default'] {
         padding-right: calc(sugar.margin(30) + 1em);
     }
 
-    .s-slider {
+    > .s-slider {
         aspect-ratio: 16/9;
         position: relative;
-    }
 
-    .s-slider__slides-wrapper {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        border-radius: sugar.border.radius(ui.slider.borderRadius);
-    }
+        > .s-slider__slides-wrapper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            border-radius: sugar.border.radius(ui.slider.borderRadius);
 
-    .s-slider__slides {
-        display: flex;
-        flex-basis: 100%;
-        user-select: none;
-        width: 100%;
-        height: 100%;
-    }
+            > .s-slider__slides {
+                display: flex;
+                flex-basis: 100%;
+                user-select: none;
+                width: 100%;
+                height: 100%;
 
-    &[direction='vertical'] .s-slider__slides {
-        flex-direction: column;
-    }
-
-    .s-slider__slide {
-        flex-shrink: 0;
-        width: calc(100% - var(--s-slider-inline-reveal, 0%) * 2);
-        height: calc(100% - var(--s-slider-block-reveal, 0%) * 2);
-    }
-
-    .s-slider__nav {
-        position: absolute;
-        top: calc(100% + sugar.margin(30));
-        left: 50%;
-        transform: translate(-50%);
-        display: flex;
-        gap: sugar.margin(10);
-
-        > * {
-            border-radius: 50%;
-            display: block;
-            width: 0.5em;
-            height: 0.5em;
-            background: sugar.color(current);
-            opacity: 0.3;
-            transition: sugar.theme(ui.slider.transition);
-            cursor: pointer;
-
-            &:hover {
-                opacity: 0.6;
+                > .s-slider__slide {
+                    flex-shrink: 0;
+                    width: calc(100% - var(--s-slider-inline-reveal, 0%) * 2);
+                    height: calc(100% - var(--s-slider-block-reveal, 0%) * 2);
+                }
             }
-            &.active {
-                opacity: 1;
+        }
+
+        > .s-slider__nav {
+            position: absolute;
+            top: calc(100% + sugar.margin(30));
+            left: 50%;
+            transform: translate(-50%);
+            display: flex;
+            gap: sugar.margin(10);
+
+            > * {
+                border-radius: 50%;
+                display: block;
+                width: 0.5em;
+                height: 0.5em;
+                background: sugar.color(current);
+                opacity: 0.3;
+                transition: sugar.theme(ui.slider.transition);
+                cursor: pointer;
+
+                &:hover {
+                    opacity: 0.6;
+                }
+                &.active {
+                    opacity: 1;
+                }
             }
         }
     }
-    &[lnf*='contained'] .s-slider__nav {
+
+    &[direction='vertical']
+        .s-slider
+        > .s-slider__slides-wrapper
+        > .s-slider__slides {
+        flex-direction: column;
+    }
+
+    &[lnf*='contained'] .s-slider > .s-slider__nav {
         top: auto;
         bottom: calc(sugar.margin(30) - 0.5em);
         transform: translate(-50%, -100%);
     }
-    &[direction='vertical'] .s-slider__nav {
+    &[direction='vertical'] .s-slider > .s-slider__nav {
         top: 50%;
         left: calc(100% + sugar.margin(30));
         transform: translate(0, -50%);
         flex-direction: column;
         gap: sugar.margin(10);
     }
-    &[lnf*='contained'][direction='vertical'] .s-slider__nav {
+    &[lnf*='contained'][direction='vertical'] .s-slider - > .s-slider__nav {
         bottom: auto;
         left: auto;
         right: calc(sugar.margin(30));
         transform: translate(0, -50%);
     }
 
-    .s-slider__progress {
+    > .s-slider > .s-slider__progress {
         position: absolute;
         bottom: sugar.margin(30);
         left: sugar.margin(30);
@@ -113,77 +128,96 @@ s-slider[lnf^='default'] {
         height: 0.5em;
         border-radius: sugar.border.radius(ui.slider.borderRadius);
         background: sugar.color(current, --alpha 0.3);
-    }
-    .s-slider__progress-bar {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: calc(
-            100% / (var(--s-slider-total)) * (var(--s-slider-slide) + 1)
-        );
-        border-radius: sugar.border.radius(ui.slider.borderRadius);
-        background: sugar.color(current);
-        transition: sugar.theme(ui.slider.transition);
-        /* transition: all var(--s-slider-slide-timer-total) linear; */
-    }
 
-    .s-slider__controls {
-    }
-    .s-slider__controls-next,
-    .s-slider__controls-previous {
-        width: 1em;
-        height: 1em;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        cursor: pointer;
-        opacity: 0.3;
-        pointer-events: none;
-        transition: sugar.theme(ui.slider.transition);
-
-        &.active {
-            pointer-events: all;
-            opacity: 1;
+        > .s-slider__progress-bar {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: calc(
+                100% / (var(--s-slider-total)) * (var(--s-slider-slide) + 1)
+            );
+            border-radius: sugar.border.radius(ui.slider.borderRadius);
+            background: sugar.color(current);
+            transition: sugar.theme(ui.slider.transition);
+            /* transition: all var(--s-slider-slide-timer-total) linear; */
         }
     }
-    .s-slider__controls-previous {
-        right: calc(100% + sugar.margin(30));
+
+    > .s-slider > .s-slider__controls {
+        .s-slider__controls-next,
+        .s-slider__controls-previous {
+            width: 1em;
+            height: 1em;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            opacity: 0.3;
+            pointer-events: none;
+            transition: sugar.theme(ui.slider.transition);
+
+            &.active {
+                pointer-events: all;
+                opacity: 1;
+            }
+        }
+        .s-slider__controls-previous {
+            right: calc(100% + sugar.margin(30));
+        }
+        .s-slider__controls-next {
+            left: calc(100% + sugar.margin(30));
+        }
     }
-    .s-slider__controls-next {
-        left: calc(100% + sugar.margin(30));
-    }
-    &[lnf*='contained'] .s-slider__controls-previous {
+    &[lnf*='contained']
+        > .s-slider
+        > .s-slider__controls
+        .s-slider__controls-previous {
         left: calc(sugar.margin(30));
         transform: translate(0, -50%);
     }
-    &[lnf*='contained'] .s-slider__controls-next {
+    &[lnf*='contained']
+        > .s-slider
+        > .s-slider__controls
+        .s-slider__controls-next {
         left: auto;
         right: calc(sugar.margin(30));
         transform: translate(0, -50%);
     }
 
-    &[direction='vertical'] .s-slider__controls-next {
+    &[direction='vertical']
+        > .s-slider
+        > .s-slider__controls
+        .s-slider__controls-next {
         left: 50%;
         top: calc(100% + sugar.margin(30));
         transform: translate(-50%, 0) rotate(90deg);
     }
-    &[direction='vertical'] .s-slider__controls-previous {
+    &[direction='vertical']
+        > .s-slider
+        > .s-slider__controls
+        .s-slider__controls-previous {
         left: 50%;
         bottom: calc(100% + sugar.margin(30));
         top: auto;
         transform: translate(-50%, 0) rotate(90deg);
     }
-    &[direction='vertical'][lnf*='contained'] .s-slider__controls-previous {
+    &[direction='vertical'][lnf*='contained']
+        > .s-slider
+        > .s-slider__controls
+        .s-slider__controls-previous {
         top: calc(sugar.margin(30));
     }
-    &[direction='vertical'][lnf*='contained'] .s-slider__controls-next {
+    &[direction='vertical'][lnf*='contained']
+        > .s-slider
+        > .s-slider__controls
+        .s-slider__controls-next {
         top: auto;
         bottom: calc(sugar.margin(30));
     }
 
-    .s-slider__controls-next-arrow,
-    .s-slider__controls-previous-arrow {
+    > .s-slider > .s-slider__controls .s-slider__controls-next-arrow,
+    > .s-slider > .s-slider__controls .s-slider__controls-previous-arrow {
         width: 1em;
         height: 1em;
         position: absolute;
@@ -210,7 +244,7 @@ s-slider[lnf^='default'] {
             transform: rotate(-45deg);
         }
     }
-    .s-slider__controls-next-arrow {
+    > .s-slider > .s-slider__controls .s-slider__controls-next-arrow {
         transform: rotate(180deg);
     }
 }
