--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -9,12 +9,20 @@
     text-align: center;
   }
 
-  .__user-1,
-  .__user-2,
-  .__user-3 {
+  .__rating-1,
+  .__rating-2,
+  .__rating-3 {
     position: absolute;
     top: 50%;
     left: 50%;
+
+    .s-loader {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 30px;
+    }
 
     .s-avatar {
     }
@@ -36,13 +44,13 @@
       }
     }
   }
-  .__user-1 {
+  .__rating-1 {
     transform: translate(-700px, -250px) scale(0.8);
   }
-  .__user-2 {
+  .__rating-2 {
     transform: translate(-580px, 110px) scale(0.6);
   }
-  .__user-3 {
+  .__rating-3 {
     transform: translate(550px, 0px);
   }
 
@@ -90,12 +98,13 @@
     } */
 
   .s-avatar {
-    @sugar.color (#ffffff);
-    @sugar.depth (20);
+    font-size: 100px;
+    /* @sugar.color (#ffffff); */
+    /* @sugar.depth (20); */
 
-    @sugar.theme.when dark {
+    /* @sugar.theme.when dark {
       @sugar.color (#383F49);
-    }
+    } */
   }
   .s-tooltip {
     @sugar.color (#ffffff);
