--- a/packages/@websites/coffeekraken-io/src/css/generic/layout.css
+++ b/packages/@websites/coffeekraken-io/src/css/generic/layout.css
@@ -84,13 +84,14 @@
   }
 
   .__logo {
-    width: 140px;
+    width: 240px;
+    height: 60px;
     position: relative;
     left: 12px;
 
     svg {
-      height: 40px;
-      width: 140px;
+      width: 100%;
+      height: auto;
       transform-origin: 0 50%;
       transform: translate(-10px, 0px);
 
@@ -100,18 +101,18 @@
       }
     }
 
-    svg .main {
+    svg [fill="white"] {
       fill: sugar.color(main, --darken 10);
     }
-    svg .accent {
+    svg [fill="#FEBD0F"] {
       fill: sugar.color(accent);
     }
 
     @sugar.theme.when (dark) {
-      svg .main {
+      svg [fill="white"] {
         fill: sugar.color(main, text);
       }
-      svg .accent {
+      svg [fill="#FEBD0F"] {
         fill: sugar.color(accent);
       }
     }
