--- a/packages/@websites/coffeekraken-io/src/views/pages/homepage/features/partials/opensource.css
+++ b/packages/@websites/coffeekraken-io/src/views/pages/homepage/features/partials/opensource.css
@@ -1,42 +1,47 @@
 @keyframes opensource-animation {
-  0% {
-    padding: 20px 10px;
-    opacity: 1;
-    transform: translate(150px, 0) rotateZ(10deg) scale(1);
-  }
-  50% {
-    opacity: 0.2;
-    transform: translate(50px, 0) scale(1.2);
-  }
-  100% {
-    padding: 20px 30px;
-    opacity: 0;
-    transform: translate(-150px, 0) rotateZ(-180deg) scale(0.5);
-  }
+    0% {
+        padding: 20px 10px;
+        opacity: 1;
+        transform: translate(150px, 0) rotateZ(10deg) scale(1);
+    }
+    50% {
+        opacity: 0.2;
+        transform: translate(50px, 0) scale(1.2);
+    }
+    100% {
+        padding: 20px 30px;
+        opacity: 0;
+        transform: translate(-150px, 0) rotateZ(-180deg) scale(0.5);
+    }
 }
 
 #features-opensource {
-  .illustration {
-    height: 450px;
-  }
+    .illustration {
+        height: 450px;
 
-  .__box {
-    position: relative;
-    overflow: hidden;
-    /* margin-top: -300px; */
-    @sugar.depth (10);
-    background: white;
-
-    @sugar.theme.when dark {
-      @sugar.depth (100);
-      background: sugar.color(main, background, --lighten 5%);
+        @sugar.media mobile {
+            height: auto;
+            margin-block-end: sugar.margin(20);
+        }
     }
 
-    @sugar.media mobile {
-      margin-top: 0;
-    }
+    .__box {
+        position: relative;
+        overflow: hidden;
+        /* margin-top: -300px; */
+        @sugar.depth (10);
+        background: white;
 
-    /* &:before {
+        @sugar.theme.when dark {
+            @sugar.depth (100);
+            background: sugar.color(main, background, --lighten 5%);
+        }
+
+        @sugar.media mobile {
+            margin-top: 0;
+        }
+
+        /* &:before {
       content: "";
       position: absolute;
       top: 0;
@@ -55,5 +60,5 @@
         background-image: url("/dist/img/welcome/welcome-bg-01.jpg");
       }
     } */
-  }
+    }
 }
