--- a/packages/renderers/s-view-renderer/src/php/views/twig/coffeekraken/layouts/main.twig
+++ b/packages/renderers/s-view-renderer/src/php/views/twig/coffeekraken/layouts/main.twig
@@ -52,7 +52,7 @@
     {# {!! \Sugar\frontspec\metas($frontspec->metas, $env) !!} #}
     
     <!-- og -->
-    {{ frontspecOg(ogObj)|raw }}
+    {{ frontspecOg(ogObj|toObject)|raw }}
     
     <!-- assets -->
     {% set cacheBuster = '' %}
