--- a/packages/@websites/coffeekraken-io/src/css/index.css
+++ b/packages/@websites/coffeekraken-io/src/css/index.css
@@ -3,31 +3,31 @@
 @sugar.import ('./generic/**/*.css');
 
 html {
-  overflow-x: hidden;
+    overflow-x: auto;
 }
 
 body {
-  width: 100vw;
-  display: block;
+    width: 100vw;
+    display: block;
 
-  @sugar.theme.when (dark) {
-    background-color: sugar.color(main, --darken 30);
+    @sugar.theme.when (dark) {
+        background-color: sugar.color(main, --darken 30);
 
-    background-image: radial-gradient(
-      ellipse at top left,
-      sugar.color(main, --darken 25),
-      sugar.color(main, --darken 35)
-    );
-    background-attachment: fixed;
-  }
+        background-image: radial-gradient(
+            ellipse at top left,
+            sugar.color(main, --darken 25),
+            sugar.color(main, --darken 35)
+        );
+        background-attachment: fixed;
+    }
 
-  @sugar.media mobile {
-    background-image: none !important;
-  }
+    @sugar.media mobile {
+        background-image: none !important;
+    }
 }
 
 .hljs > * {
-  display: inline-block !important;
+    display: inline-block !important;
 }
 
 /* [class*='s-btn']:not(s-date-picker [class*='s-btn']):not(.preview
@@ -36,36 +36,36 @@ body {
 } */
 
 .s-container {
-  @sugar.media (>=wide) {
-    @sugar.container (wide);
-  }
+    @sugar.media (>=wide) {
+        @sugar.container (wide);
+    }
 }
 
 .s-page-transition.loading * {
-  user-select: none;
-  pointer-events: none !important;
+    user-select: none;
+    pointer-events: none !important;
 }
 
 .sticky {
-  @sugar.media (>=desktop) {
-    position: sticky;
-    top: 100px;
-  }
+    @sugar.media (>=desktop) {
+        position: sticky;
+        top: 100px;
+    }
 }
 
 [s-form-validate][password] {
-  .__levels * {
-    display: none;
-    margin-inline-end: sugar.margin(20);
-  }
+    .__levels * {
+        display: none;
+        margin-inline-end: sugar.margin(20);
+    }
 
-  &.password-weak .__levels .__weak {
-    display: inline-block;
-  }
-  &.password-medium .__levels .__medium {
-    display: inline-block;
-  }
-  &.password-strong .__levels .__strong {
-    display: inline-block;
-  }
+    &.password-weak .__levels .__weak {
+        display: inline-block;
+    }
+    &.password-medium .__levels .__medium {
+        display: inline-block;
+    }
+    &.password-strong .__levels .__strong {
+        display: inline-block;
+    }
 }
