--- a/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
+++ b/packages/@examples/01-basic/src/views/sections/tabs/tabs.twig
@@ -1,7 +1,18 @@
-<section class="section-specs">
+<section class="section-tabs">
     <div class="s-container">
-        <div class="s-layout:123">
-            {% for spec in specs %}
+        <div class="s-layout:1222">
+
+            <div>
+                <div class="__tabs s-tab:vertical">
+                    {% for tab in tabs %}
+                        <div>
+                            {{ tab.title }}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+
+            {# {% for spec in specs %}
                 <div class="__spec">
                     <h1 class="s-typo:h1 s-mbe:30">{{ spec.title|raw }}</h1>
                     <p class="s-typo:lead s-mbe:20 s-tc:accent">{{ spec.intro|raw }}</p>
@@ -10,7 +21,7 @@
                         {{ spec.cta.label }}
                     </a>
                 </div>
-            {% endfor %}
+            {% endfor %} #}
         </div>
     </div>
 </section>
