--- a/packages/@examples/01-basic/src/views/layouts/header/header.twig
+++ b/packages/@examples/01-basic/src/views/layouts/header/header.twig
@@ -6,7 +6,7 @@
                 {% include 'generic/logo/logo.twig' %}
             </div>
             <div class="s-flex-item:grow">
-                {% include '@sugar/menu/generic/generic.twig' %}
+                {% include 'sugar/menu/generic/generic.twig' %}
             </div>
         </nav>
     </div>
