--- a/packages/@examples/01-basic/src/views/layouts/main.twig
+++ b/packages/@examples/01-basic/src/views/layouts/main.twig
@@ -1,4 +1,4 @@
-{% extends '@sugar/layouts/main/main.twig' %}
+{% extends 'sugar/layouts/main/main.twig' %}
 
 {# @extends('coffeekraken.layouts.main', [
     'bodyAttributes' => [
