--- a/packages/@examples/01-basic/src/css/generic/sections/specs.css
+++ b/packages/@examples/01-basic/src/css/generic/sections/specs.css
@@ -1,31 +1,50 @@
 .section-specs {
-  background: sugar.color(base, surface, --darken 10%);
-  background: linear-gradient(
-    sugar.color(base, surface, --darken 10%),
-    sugar.color(base, surface, --alpha 0)
-  );
-  margin-block-start: 100px;
-  margin-block-end: 100px;
+    background: sugar.color(base, surface, --darken 10%);
+    background: linear-gradient(
+        sugar.color(base, surface, --darken 10%),
+        sugar.color(base, surface, --alpha 0)
+    );
+    margin-block-start: 100px;
+    margin-block-end: 100px;
+    position: relative;
+    z-index: 20;
 
-  .card {
-    margin-block-end: -100px;
-  }
+    .card {
+        margin-block-end: -100px;
+        @sugar.transition();
 
-  .s-layout {
-    & > *:nth-child(1) .card {
-      position: relative;
-      top: -100px;
-      left: -50px;
+        .s-card__img {
+            @sugar.transition(
+            );
+        }
+
+        &:hover {
+            transform: rotateX(0) rotateY(0) rotateZ(0) !important;
+
+            .s-card__img {
+                transform: rotateX(0) rotateY(0) rotateZ(0) translate(0, 0) !important;
+            }
+        }
     }
-    & > *:nth-child(2) .card {
-      position: relative;
-      top: 100px;
-      left: 0;
+
+    .s-layout {
+        & > *:nth-child(1) .card {
+            position: relative;
+            top: -100px;
+            left: -50px;
+            transform: rotateX(5deg) rotateY(5deg) rotateZ(2deg);
+        }
+        & > *:nth-child(2) .card {
+            position: relative;
+            top: 100px;
+            left: 0;
+            transform: rotateX(-5deg) rotateY(-5deg) rotateZ(0deg);
+        }
+        & > *:nth-child(3) .card {
+            position: relative;
+            top: -40px;
+            left: 50px;
+            transform: rotateX(5deg) rotateY(5deg) rotateZ(-1deg);
+        }
     }
-    & > *:nth-child(3) .card {
-      position: relative;
-      top: -30px;
-      left: 50px;
-    }
-  }
 }
