--- a/packages/app/s-kitchen/src/data/defaultPages/twig/views/layouts/main.twig
+++ b/packages/app/s-kitchen/src/data/defaultPages/twig/views/layouts/main.twig
@@ -1,4 +1,4 @@
-{% extends '@sugar/layouts/main/main.twig' %}
+{% extends 'sugar/layouts/main/main.twig' %}
 
 {# @extends('coffeekraken.layouts.main', [
     'bodyAttributes' => [
