--- a/packages/@examples/01-basic/src/views/sections/story/story.twig
+++ b/packages/@examples/01-basic/src/views/sections/story/story.twig
@@ -6,7 +6,7 @@
                     {{ title|raw }}
                 </h1>
                 <p class="s-typo:p">
-                    {{ description|raw }}
+                    {{ text|raw }}
                 </p>
                 <a class="s-btn s-mbs:40 s-color:accent" href="{{ cta.link.url }}" target="{{ cta.link.target }}">
                     {{ cta.label }}
